<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sede"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_sede" />
        <item
            android:id="@+id/nav_area"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_area" />
        <item
            android:id="@+id/nav_estado"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_estado" />
        <item
            android:id="@+id/nav_tipo_equipo"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_tipo_equipo" />
        <item
            android:id="@+id/nav_falla"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_falla" />
        <item
            android:id="@+id/nav_otras_activiades"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_otras_actividades" />
        <item
            android:id="@+id/nav_informes_tecnicos"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/menu_informes" />

        <item
            android:id="@+id/nav_pdf_informes"
            android:icon="@drawable/baseline_document_scanner_24"
            android:title="@string/menu_pdf" />
    </group>
</menu>